--- a/wxjssdk.html
+++ b/wxjssdk.html
@@ -33,6 +33,7 @@ pre,.functionTestList{font:14px "MicroSoft YaHei","Courier New","Andale Mono",mo
 		<li class="title">其他</li>
 		<li data-page="menuList">可控制菜单列表</li>
 		<li data-page="functionTest">功能测试</li>
+		<li data-page="general">接口通用参数</li>
 		<li class="title">分享接口</li>
 		<li data-page="onMenuShareTimeline">[分享到朋友圈]onMenuShareTimeline</li>
 		<li data-page="onMenuShareAppMessage">[分享给朋友]onMenuShareAppMessage</li>
@@ -115,11 +116,36 @@ pre,.functionTestList{font:14px "MicroSoft YaHei","Courier New","Andale Mono",mo
 	</div>
 	<div class="page hide" id="functionTest">
 	<div class="page-title"><a href="javascript:;" class="jq-fh">< 返回</a><h3>功能测试</h3></div>
+<pre>wx.checkJsApi({
+    jsApiList: ['chooseImage'] // 需要检测的JS接口列表，所有JS接口列表见附录2,
+    success: function(res) {
+        // 以键值对的形式返回，可用的api值true，不可用为false
+        // 如：{"checkResult":{"chooseImage":true},"errMsg":"checkJsApi:ok"}
+    });
+</pre>
+<p>备注：checkJsApi接口是客户端6.0.2新引入的一个预留接口，第一期开放的接口均可不使用checkJsApi来检测。</p>
 		<ul class="functionTestList">
 			
 		</ul>
 		<p>&nbsp;</p>
 	</div>
+	<div class="page hide" id="general">
+	<div class="page-title"><a href="javascript:;" class="jq-fh">< 返回</a><h3>接口通用参数</h3></div>
+<pre>
+所有接口通过wx对象(也可使用jWeixin对象)来调用，参数是一个对象，除了每个接口本身需要传的参数之外，还有以下通用参数：
+
+	success：接口调用成功时执行的回调函数。
+	fail：接口调用失败时执行的回调函数。
+	complete：接口调用完成时执行的回调函数，无论成功或失败都会执行。
+	cancel：用户点击取消时的回调函数，仅部分有用户取消操作的api才会用到。
+	trigger: 监听Menu中的按钮点击时触发的方法，该方法仅支持Menu中的相关接口。
+
+	以上几个函数都带有一个参数，类型为对象，其中除了每个接口本身返回的数据之外，还有一个通用属性errMsg，其值格式如下：
+
+	调用成功时："xxx:ok" ，其中xxx为调用的接口名
+	用户取消时："xxx:cancel"，其中xxx为调用的接口名
+	调用失败时：其值为具体错误信息
+</pre></div>
 	<div class="page hide" id="onMenuShareTimeline">
 	<div class="page-title"><a href="javascript:;" class="jq-fh">< 返回</a><h3>分享到朋友圈</h3></div>
 	<p>效果请点击右上角按钮选择分享到朋友圈</p>
